Complete operational Spend tables
